--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_core: ^0.4.3+2
+  firebase_auth: ^0.15.3+1
+  firebase_storage: ^3.1.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
